--- a/uni/Klassifizierung_von_Parteien/03_Erklärungsansätze_für_Auftreten_und_Erfolg_von_Populismus/spier.org
+++ b/uni/Klassifizierung_von_Parteien/03_Erklärungsansätze_für_Auftreten_und_Erfolg_von_Populismus/spier.org
@@ -122,3 +122,17 @@ Bei Wahlen kam es dann vermehrt Achtungserfolgen von kleinen Splitterparteien, d
 :NOTER_PAGE: 15
 :END:
 - seit Mitte der 1980er kann in vielen westlichen Industrienationen der Aufstieg "rechtspopulistischer Parteien" beobachtet werden
+- parallele Entwicklung hinsichtlich der Wahlergebnisse solcher Parteien lässt vermuten, dass es auch länderübergreifende Gründe für dieses Phänomen gibt:
+  - Phänomene ebenfalls Folge von Modernisierungsprozessen -> Prozess der Globalisierung (/"Populismus als Schattenseite der Globalisierung"/)
+
+Doch inwiefern ist die Globalisierung tatsächlich für das Erstarken dieser Parteienfamilie verantwortlich?
+- umstritten ob es "Globalisierung" überhaupt gibt
+  - wenn ja, worin liegt das spezifisch Neue der heute ablaufenden Globalisierungsprozesse
+
+bedeutendste Dimension der Globalisierung ist die ökonomische
+- weltweite Ausdehnung wirtschaftl Aktivitäten
+- wachsende Intensität der Waren- und Kapitalströme
+- zunehmende Exportorientierung führt dazu, dass Industrien in "Schwellenländern" in Konkurrenz zu alten Industrienationen treten 
+
+-> ökon. Globalisierung schafft Verlierer in den Bereichen der Volkswirtschaft, die von der internationalen Konkurrenz am stärksten betroffen sind und daher Strukturanpassungen vornehmen müssen
+- Arbeitslosigkeit, Berufswechsel oder sinkende Reallöhne als mögliche Folge
