--- a/uni/Klassifizierung_von_Parteien/03_Erklärungsansätze_für_Auftreten_und_Erfolg_von_Populismus/spier.org
+++ b/uni/Klassifizierung_von_Parteien/03_Erklärungsansätze_für_Auftreten_und_Erfolg_von_Populismus/spier.org
@@ -190,3 +190,12 @@ Aufbrechen der kulturellen Traditionen ruft bei vielen Menschen Verunsicherung h
 Im Falle objektiver Deprivation würde man erwarten, dass gerade jüngere männliche Industriearbeiter mit eher geringer Qualifikation betroffen, sowie Gruppe des traditionellen alten Mittelstandes aus kleinen Ladenbesitzern und Handwerken sind
 
 Bei Indikatoren subjektiver Deprivation ist davon auszugehen, dass Wähler rechtspopulistischer Parteien eine Verschlechterung der allgemeinen wirtschaftl. Situation & konkreten Finanzlage sehen + zusätzlich befürchten, dass sich ihre persönliche Situation weiter verschlechert
+
+** Sitzung
+- Katz & Meyer: Kartellparteithese
+- Erklärung 2018
+- Erklärungsfaktoren Arzheimer:
+  1. westl Gesellschaften eher autoritär ausgerichtet (Adorno & co)
+  2. These der Modernisisierungsverlierer
+  3. Gruppen- und Identitätskonflikte
+  4. politische Kultur
