--- a/uni/Textanalyse/04_Manuelle_Textanalyse_1_Mediendaten/Reinemann.org
+++ b/uni/Textanalyse/04_Manuelle_Textanalyse_1_Mediendaten/Reinemann.org
@@ -105,3 +105,9 @@ Konkret:
 - Verschwinden des "Kanzlerbonus" (Amtsbonus, Heimspiel)
 - mehrere aber dafür kürzere Zitate
 - Weiterführung des Trends erhöhter Negativität seit 1980
+  
+* Sitzung
+- Tv Duelle beeinflussen Berichterstattung systematisch
+- Methodenteil ist gutes Beispiel fuer Abschlussarbeit
+- zB AUTNES o. GESIS o. GLES(German Longitudinal Election Study) kann fuer eigene Analysen/Projekte verwendet werden
+- GLES Design im Überblick
