--- a/uni/Klassifizierung_von_Parteien/04_Threat_or_Corrective?_Braucht_die_Demokratie_den_Populismus/MRK_b.org
+++ b/uni/Klassifizierung_von_Parteien/04_Threat_or_Corrective?_Braucht_die_Demokratie_den_Populismus/MRK_b.org
@@ -18,3 +18,4 @@ Analyse von 8 überregionalen Fallstudien
 :PROPERTIES:
 :NOTER_PAGE: 6
 :END:
+- minimale Definitionen/Konzepte von Demokratie & Populismus, um konzeptuellen Geltungsbereich zu erweitern
